correction du gap entre les catégories du nav

--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,6 @@ display: flex;
 flex-direction: row;
 width: 100%;
 align-items: center;
-gap: 30px;
 margin: 30px 0;
 }
 
@@ -624,4 +623,3 @@ header nav a:hover, .selected{
 
     /* ... */
 }
-
